--- a/BlindBoxShop.Application/Pages/Account/Pages/MyAccount.razor
+++ b/BlindBoxShop.Application/Pages/Account/Pages/MyAccount.razor
@@ -279,7 +279,7 @@ else
     }
     
     /* Order status styles */
-    .order-status-pending {
+    .order-status-awaiting-payment {
         background-color: #ffd700 !important;
         color: #000 !important;
     }
